feat: Added execute check function; fix: Fixed cron locking
